Split rotationspeed option to allow for separate horizontal and vertical speed configurations (controller)

--- a/src/main/resources/assets/midnightcontrols/lang/de_de.json
+++ b/src/main/resources/assets/midnightcontrols/lang/de_de.json
@@ -112,7 +112,8 @@
   "midnightcontrols.menu.reacharound.vertical": "Vertikales Umgreifen",
   "midnightcontrols.menu.reload_controller_mappings": "Controller-Mappings neuladen",
   "midnightcontrols.menu.right_dead_zone": "Rechte tote Zone",
-  "midnightcontrols.menu.rotation_speed": "Rotationsgeschwindigkeit",
+  "midnightcontrols.menu.rotation_speed": "Rotationsgeschwindigkeit (X-Achse)",
+  "midnightcontrols.menu.y_axis_rotation_speed": "Rotationsgeschwindigkeit (Y-Achse)",
   "midnightcontrols.menu.separator.controller": "Controller",
   "midnightcontrols.menu.separator.general": "Generell",
   "midnightcontrols.menu.title": "MidnightControls - Einstellungen",
@@ -148,7 +149,8 @@
   "midnightcontrols.tooltip.reacharound.vertical": "Aktiviert vertikales Platzieren von Blöcken, §cwird von manchen Servern als cheaten eingestuft§r.",
   "midnightcontrols.tooltip.reload_controller_mappings": "Lädt die Controller-Mappings neu.",
   "midnightcontrols.tooltip.right_dead_zone": "Die tote Zone für den rechten Analogstick.",
-  "midnightcontrols.tooltip.rotation_speed": "Die Kamerarotationsgeschwindigkeit im Controllermodus.",
+  "midnightcontrols.tooltip.rotation_speed": "Die Kamerarotationsgeschwindigkeit im Controllermodus. (X-Achse)",
+  "midnightcontrols.tooltip.y_axis_rotation_speed": "Die Kamerarotationsgeschwindigkeit im Controllermodus. (Y-Achse)",
   "midnightcontrols.tooltip.unfocused_input": "Erlaube Controllereingabe auch wenn das Fenster nicht fokussiert ist.",
   "midnightcontrols.tooltip.virtual_mouse": "Aktiviere die virtuelle Maus.",
   "midnightcontrols.virtual_mouse.skin.default_light": "Standard Hell",
