--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -116,7 +116,8 @@
   "midnightcontrols.menu.reacharound.vertical": "Vertical Reacharound",
   "midnightcontrols.menu.reload_controller_mappings": "Reload Controller Mappings",
   "midnightcontrols.menu.right_dead_zone": "Right Dead Zone",
-  "midnightcontrols.menu.rotation_speed": "Rotation Speed",
+  "midnightcontrols.menu.rotation_speed": "X Axis Rotation Speed",
+  "midnightcontrols.menu.y_axis_rotation_speed": "Y Axis Rotation Speed",
   "midnightcontrols.menu.separator.controller": "Controller",
   "midnightcontrols.menu.separator.general": "General",
   "midnightcontrols.menu.title": "MidnightControls - Settings",
@@ -152,7 +153,8 @@
   "midnightcontrols.tooltip.reacharound.vertical": "Enables vertical reacharound, §cmight be considered cheating on some servers§r.",
   "midnightcontrols.tooltip.reload_controller_mappings": "Reloads the controller mappings file.",
   "midnightcontrols.tooltip.right_dead_zone": "The dead zone for the controller's right analogue stick.",
-  "midnightcontrols.tooltip.rotation_speed": "The camera rotation speed in controller mode.",
+  "midnightcontrols.tooltip.rotation_speed": "The camera X Axis rotation speed in controller mode.",
+  "midnightcontrols.tooltip.y_axis_rotation_speed": "The camera Y Axis rotation speed in controller mode.",
   "midnightcontrols.tooltip.unfocused_input": "Allow controller input when the window is not focused.",
   "midnightcontrols.tooltip.virtual_mouse": "Enable the virtual mouse which is handful in the case of a splitscreen.",
   "midnightcontrols.virtual_mouse.skin.default_light": "Default Light",
