--- a/src/main/resources/assets/midnightcontrols/lang/es_mx.json
+++ b/src/main/resources/assets/midnightcontrols/lang/es_mx.json
@@ -104,7 +104,8 @@
   "midnightcontrols.menu.reacharound.vertical": "Alcance vertical",
   "midnightcontrols.menu.reload_controller_mappings": "Recargar asignaciones de controlador",
   "midnightcontrols.menu.right_dead_zone": "Zona muerta derecha",
-  "midnightcontrols.menu.rotation_speed": "Velocidad de rotación",
+  "midnightcontrols.menu.rotation_speed": "Velocidad de rotación (eje X)",
+  "midnightcontrols.menu.y_axis_rotation_speed": "Velocidad de rotación (eje Y)",
   "midnightcontrols.menu.separator.controller": "Controlador",
   "midnightcontrols.menu.separator.general": "General",
   "midnightcontrols.menu.title": "midnightcontrols - Configuraciones",
@@ -140,7 +141,8 @@
   "midnightcontrols.tooltip.reacharound.vertical": "Habilita el alcance vertical, §cpodría considerarse trampa en algunos servidores§r.",
   "midnightcontrols.tooltip.reload_controller_mappings": "Vuelve a cargar el archivo de asignaciones del controlador.",
   "midnightcontrols.tooltip.right_dead_zone": "La zona muerta de la palanca analógica derecha del controlador.",
-  "midnightcontrols.tooltip.rotation_speed": "La velocidad de rotación de la cámara en modo controlador.",
+  "midnightcontrols.tooltip.rotation_speed": "La velocidad de rotación de la cámara en modo controlador. (eje X)",
+  "midnightcontrols.tooltip.y_axis_rotation_speed": "La velocidad de rotación de la cámara en modo controlador. (eje Y)",
   "midnightcontrols.tooltip.unfocused_input": "Habilita entrada del controlador cuando la ventana no está enfocada.",
   "midnightcontrols.tooltip.virtual_mouse": "Habilite el ratón virtual que es útil en el caso de una pantalla dividida.",
   "midnightcontrols.virtual_mouse.skin.default_light": "Ligera por defecto",
