--- a/src/main/resources/assets/midnightcontrols/lang/fr_ca.json
+++ b/src/main/resources/assets/midnightcontrols/lang/fr_ca.json
@@ -104,7 +104,8 @@
   "midnightcontrols.menu.reacharound.vertical": "Placement vertical",
   "midnightcontrols.menu.reload_controller_mappings": "Recharger les manettes",
   "midnightcontrols.menu.right_dead_zone": "Zone morte axe droit",
-  "midnightcontrols.menu.rotation_speed": "Vitesse de rotation",
+  "midnightcontrols.menu.rotation_speed": "Vitesse de rotation (X)",
+  "midnightcontrols.menu.y_axis_rotation_speed": "Vitesse de rotation (Y)",
   "midnightcontrols.menu.separator.general": "Général",
   "midnightcontrols.menu.separator.controller": "Manette",
   "midnightcontrols.menu.title": "midnightcontrols - Paramètres",
@@ -140,7 +141,8 @@
   "midnightcontrols.tooltip.reacharound.vertical": "Active le placement vertical de blocs, c'est-à-dire de blocs en dessous du bloc sur lequel vous êtes placé, §cpeut être considérer comme de la triche sur certains serveurs§r.",
   "midnightcontrols.tooltip.reload_controller_mappings": "Recharge le fichier de configuration des manettes.",
   "midnightcontrols.tooltip.right_dead_zone": "Zone morte de l'axe droit de la manette.",
-  "midnightcontrols.tooltip.rotation_speed": "Change la vitesse de rotation de la caméra.",
+  "midnightcontrols.tooltip.rotation_speed": "Change la vitesse de rotation de la caméra. (X)",
+  "midnightcontrols.tooltip.y_axis_rotation_speed": "Change la vitesse de rotation de la caméra. (Y)",
   "midnightcontrols.tooltip.unfocused_input": "Autorise les entrées manette quand la fenêtre n'est pas sélectionnée.",
   "midnightcontrols.tooltip.virtual_mouse": "Active la souris virtuelle qui est pratique dans le cas d'un écran partagé.",
   "midnightcontrols.virtual_mouse.skin.default_light": "défaut clair",
