--- a/src/main/resources/assets/midnightcontrols/lang/tr_tr.json
+++ b/src/main/resources/assets/midnightcontrols/lang/tr_tr.json
@@ -98,7 +98,8 @@
   "midnightcontrols.menu.reacharound.horizontal": "Alt Öne Blok Koyma",
   "midnightcontrols.menu.reacharound.vertical": "En Alta Blok Koyma",
   "midnightcontrols.menu.reload_controller_mappings": "Oyun Kolu Eşleştirmelerini Yenile",
-  "midnightcontrols.menu.rotation_speed": "Dönme Hızı",
+  "midnightcontrols.menu.rotation_speed": "Dönme Hızı (X)",
+  "midnightcontrols.menu.y_axis_rotation_speed": "Dönme Hızı (Y)",
   "midnightcontrols.menu.title": "midnightcontrols - Ayarlar",
   "midnightcontrols.menu.title.controller": "Oyun Kolu Seçenekleri",
   "midnightcontrols.menu.title.controller_controls": "Oyun Kolu Kontrolleri",
@@ -124,7 +125,8 @@
   "midnightcontrols.tooltip.reacharound.horizontal": "Hızlı blok koymayı etkinleştirir. §cBazı sunucular bunun hile olduğunu düşünebilir.§r.",
   "midnightcontrols.tooltip.reacharound.vertical": "En alta blok koymayı etkinleştirir. §cBazı sunucular bunun hile olduğunu düşünebilir.§r.",
   "midnightcontrols.tooltip.reload_controller_mappings": "Oyun kolu için eşleştirme dosyasını yeniler.",
-  "midnightcontrols.tooltip.rotation_speed": "Oyun kolu modunda olan kamera dönme hızı",
+  "midnightcontrols.tooltip.rotation_speed": "Oyun kolu modunda olan kamera dönme hızı (X)",
+  "midnightcontrols.tooltip.y_axis_rotation_speed": "Oyun kolu modunda olan kamera dönme hızı (Y)",
   "midnightcontrols.tooltip.unfocused_input": "Oyun penceresinde değilken oyun kolu girişine izine verir.",
   "midnightcontrols.tooltip.virtual_mouse": "Sanal fareyi etkinleştirir. Çift ekran oynanılacağı zaman işe yarar.",
   "midnightcontrols.virtual_mouse.skin.default_light": "Varsayılan Aydınlık Tema",
