--- a/src/main/resources/assets/midnightcontrols/lang/zh_cn.json
+++ b/src/main/resources/assets/midnightcontrols/lang/zh_cn.json
@@ -104,7 +104,8 @@
   "midnightcontrols.menu.reacharound.vertical": "垂直方向方块放置辅助",
   "midnightcontrols.menu.reload_controller_mappings": "重新加载手柄按键映射",
   "midnightcontrols.menu.right_dead_zone": "右摇杆死区",
-  "midnightcontrols.menu.rotation_speed": "镜头旋转速度",
+  "midnightcontrols.menu.rotation_speed": "镜头旋转速度 (X)",
+  "midnightcontrols.menu.y_axis_rotation_speed": "镜头旋转速度 (Y)",
   "midnightcontrols.menu.separator.controller": "手柄",
   "midnightcontrols.menu.separator.general": "通用",
   "midnightcontrols.menu.title": "midnightcontrols — 设置",
@@ -140,7 +141,8 @@
   "midnightcontrols.tooltip.reacharound.vertical": "启用垂直方向方块放置辅助，可在脚下方块的下方放置方块。\n§c在部分服务器可能会被认定为作弊。",
   "midnightcontrols.tooltip.reload_controller_mappings": "重新加载手柄的按键映射文件。",
   "midnightcontrols.tooltip.right_dead_zone": "右摇杆配置的死区。\n死区决定摇杆要偏离中心位置多远才能让摇杆的输入有效。",
-  "midnightcontrols.tooltip.rotation_speed": "手柄操作模式下的镜头旋转速度。",
+  "midnightcontrols.tooltip.rotation_speed": "手柄操作模式下的镜头旋转速度。(X)",
+  "midnightcontrols.tooltip.y_axis_rotation_speed": "手柄操作模式下的镜头旋转速度。(Y)",
   "midnightcontrols.tooltip.unfocused_input": "即使游戏窗口处于非活动状态，也允许手柄进行按键输入。",
   "midnightcontrols.tooltip.virtual_mouse": "启用虚拟鼠标，在分屏的情况下很有用。",
   "midnightcontrols.virtual_mouse.skin.default_light": "默认样式（白色）",
