--- a/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
+++ b/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
@@ -19,7 +19,7 @@
   "midnightcontrols.action.left": "Налево",
   "midnightcontrols.action.pause_game": "Приостановить игру",
   "midnightcontrols.action.pick_block": "Выбор Блок",
-  "midnightcontrols.action.pickup": "Разделить",
+  "midnightcontrols.action.pickup": "Взять Половину",
   "midnightcontrols.action.pickup_all": "Взять Всё",
   "midnightcontrols.action.place": "Поставить",
   "midnightcontrols.action.player_list": "Лист Игроков",
