--- a/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
+++ b/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
@@ -96,7 +96,7 @@
   "midnightcontrols.menu.controller2": "Дополнительный Контроллер",
   "midnightcontrols.menu.controller_type": "Тип контроллера",
   "midnightcontrols.menu.controls_mode": "Тип",
-  "midnightcontrols.menu.double_tap_to_sprint": "Два Раза По Левому Стику, Чтобы Начать Бегать",
+  "midnightcontrols.menu.double_tap_to_sprint": "Дважды Отвести Левый Стик, Чтобы Начать Бежать",
   "midnightcontrols.menu.fast_block_placing": "Быстрая Поставка Блоков",
   "midnightcontrols.menu.fly_drifting": "Инерция При Летание",
   "midnightcontrols.menu.fly_drifting_vertical": "Вертикальная Инерция При Летание",
