--- a/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
+++ b/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
@@ -101,7 +101,7 @@
   "midnightcontrols.menu.fly_drifting": "Инерция При Летание",
   "midnightcontrols.menu.fly_drifting_vertical": "Вертикальная Инерция При Летание",
   "midnightcontrols.menu.hud_enable": "Включить Иконоки Контроллера",
-  "midnightcontrols.menu.hud_side": "Расположение Худа",
+  "midnightcontrols.menu.hud_side": "Расположение Интерфейса",
   "midnightcontrols.menu.invert_right_x_axis": "Инвертировать Правый X",
   "midnightcontrols.menu.invert_right_y_axis": "Инвертировать Правый Y",
   "midnightcontrols.menu.keyboard_controls": "Клавиатурная Настройка...",
@@ -143,7 +143,7 @@
   "midnightcontrols.tooltip.fly_drifting": "Во время полета включает ванильную инерцию.",
   "midnightcontrols.tooltip.fly_drifting_vertical": "Во время полета включает ванильную вертикальную инерцию.",
   "midnightcontrols.tooltip.hud_enable": "Переключает видение иконок кнопок контроллера на экране.",
-  "midnightcontrols.tooltip.hud_side": "Расположение интерфейса.",
+  "midnightcontrols.tooltip.hud_side": "Расположение интерфейса в определённую сторону.",
   "midnightcontrols.tooltip.left_dead_zone": "Мертвая зона для левого аналогового стика контроллера.",
   "midnightcontrols.tooltip.max_left_x_value": "Изменяет то, что мод в итоге считает максимальным значением для левой оси X. Полезно, если ваша ось не использует весь диапазон и кажется медленной.",
   "midnightcontrols.tooltip.max_left_y_value": "Изменяет то, что мод в итоге считает максимальным значением для левой оси Y. Полезно, если ваша ось не использует весь диапазон и кажется медленной.",
