--- a/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
+++ b/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
@@ -99,7 +99,7 @@
   "midnightcontrols.menu.double_tap_to_sprint": "Дважды Отвести Левый Стик, Чтобы Начать Бежать",
   "midnightcontrols.menu.fast_block_placing": "Быстрая Поставка Блоков",
   "midnightcontrols.menu.fly_drifting": "Инерция При Полёте",
-  "midnightcontrols.menu.fly_drifting_vertical": "Вертикальная Инерция При Летание",
+  "midnightcontrols.menu.fly_drifting_vertical": "Вертикальная Инерция При Полёте",
   "midnightcontrols.menu.hud_enable": "Включить Иконоки Контроллера",
   "midnightcontrols.menu.hud_side": "Расположение Интерфейса",
   "midnightcontrols.menu.invert_right_x_axis": "Инвертировать Правый X",
