MidnightControls 1.4.0 - Many Improvements and Fixes
- EMI compat! (Switch page keybinds & more)
- Expose more keybindings
- Fix Compatibility with Quilt Creative Extension
- Improve Auto Switch mode (Automatically switch gamepad on connection changes)
- Fix triggers not working on some (slightly broken) controllers
- Fix #57 (Broken stack pickup)
- Fix #56 (Unused language strings)
- Fix #52 (Rebound perspective button blocking actions)
- Fix #46 (Button overlap with Crawl mod)
- Fix #59 (D-Pad can switch EMI buttons when in Inventories)

--- a/src/main/resources/assets/midnightcontrols/lang/de_de.json
+++ b/src/main/resources/assets/midnightcontrols/lang/de_de.json
@@ -83,7 +83,7 @@
   "midnightcontrols.controller_type.ouya": "OUYA",
   "midnightcontrols.controls_mode.default": "Tastatur/Maus",
   "midnightcontrols.controls_mode.controller": "Controller",
-  "midnightcontrols.controls_mode.touchscreen": "Touchscreen",
+  "midnightcontrols.controls_mode.touchscreen": "Touchscreen (In Arbeit)",
   "midnightcontrols.hud_side.left": "links",
   "midnightcontrols.hud_side.right": "rechts",
   "midnightcontrols.menu.analog_movement": "Analoge Bewegung",
