--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -8,6 +8,7 @@
   "midnightcontrols.action.attack": "Attack",
   "midnightcontrols.action.back": "Back",
   "midnightcontrols.action.chat": "Open Chat",
+  "midnightcontrols.action.debug_screen": "Open Debug HUD (F3)",
   "midnightcontrols.action.drop_item": "Drop Item",
   "midnightcontrols.action.exit": "Exit",
   "midnightcontrols.action.forward": "Forward",
@@ -26,6 +27,10 @@
   "midnightcontrols.action.quick_move": "Quick move",
   "midnightcontrols.action.right": "Right",
   "midnightcontrols.action.screenshot": "Take Screenshot",
+  "midnightcontrols.action.slot_up": "Move Slot up",
+  "midnightcontrols.action.slot_down": "Move Slot down",
+  "midnightcontrols.action.slot_left": "Move Slot left",
+  "midnightcontrols.action.slot_right": "Move Slot right",
   "midnightcontrols.action.sneak": "Sneak",
   "midnightcontrols.action.sprint": "Sprint",
   "midnightcontrols.action.swap_hands": "Swap Hands",
@@ -33,6 +38,8 @@
   "midnightcontrols.action.toggle_smooth_camera": "Toggle Cinematic Camera",
   "midnightcontrols.action.page_back": "Previous Page",
   "midnightcontrols.action.page_next": "Next Page",
+  "midnightcontrols.action.tab_back": "Previous Tab",
+  "midnightcontrols.action.tab_next": "Next Tab",
   "midnightcontrols.action.take": "Take Item",
   "midnightcontrols.action.take_all": "Take Stack",
   "midnightcontrols.action.use": "Use",
@@ -40,8 +47,9 @@
   "midnightcontrols.action.zoom_in": "Increase Zoom",
   "midnightcontrols.action.zoom_out": "Decrease Zoom",
   "midnightcontrols.action.zoom_reset": "Reset Zoom",
-  "midnightcontrols.action.key.emotecraft.fastchoose": "Fast Choose Emote",
-  "midnightcontrols.action.key.emotecraft.stop": "Stop Emote",
+  "midnightcontrols.action.emi_page_left": "Previous Page",
+  "midnightcontrols.action.emi_page_right": "Next Page",
+  "midnightcontrols.category.emi": "EMI",
   "midnightcontrols.button.a": "A",
   "midnightcontrols.button.b": "B",
   "midnightcontrols.button.x": "X",
@@ -79,15 +87,18 @@
   "midnightcontrols.controller.mappings.error": "Error while loading mappings.",
   "midnightcontrols.controller.mappings.error.write": "Error while writing mappings to file.",
   "midnightcontrols.controller.mappings.updated": "Updated mappings!",
-  "midnightcontrols.controller_type.default": "default",
+  "midnightcontrols.controller_type.default": "Default",
   "midnightcontrols.controller_type.dualshock": "DualShock",
+  "midnightcontrols.controller_type.dualsense": "DualSense",
   "midnightcontrols.controller_type.switch": "Switch",
   "midnightcontrols.controller_type.xbox": "Xbox",
-  "midnightcontrols.controller_type.steam": "Steam",
+  "midnightcontrols.controller_type.xbox_360": "Xbox 360",
+  "midnightcontrols.controller_type.steam_controller": "Steam Controller",
+  "midnightcontrols.controller_type.steam_deck": "Steam Deck",
   "midnightcontrols.controller_type.ouya": "OUYA",
   "midnightcontrols.controls_mode.default": "Keyboard/Mouse",
   "midnightcontrols.controls_mode.controller": "Controller",
-  "midnightcontrols.controls_mode.touchscreen": "Touchscreen",
+  "midnightcontrols.controls_mode.touchscreen": "Touchscreen (WIP)",
   "midnightcontrols.hud_side.left": "left",
   "midnightcontrols.hud_side.right": "right",
   "midnightcontrols.menu.analog_movement": "Analog Movement",
