--- a/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
+++ b/src/main/resources/assets/midnightcontrols/lang/ru_ru.json
@@ -3,7 +3,7 @@
   "key.midnightcontrols.look_down": "Смотреть Вниз",
   "key.midnightcontrols.look_left": "Смотреть Налево",
   "key.midnightcontrols.look_right": "Смотреть Направо",
-  "key.midnightcontrols.look_up": "Смотерть Вверх",
+  "key.midnightcontrols.look_up": "Смотрeть Вверх",
   "key.midnightcontrols.ring": "Показать Кольцо Управления",
   "midnightcontrols.action.attack": "Атаковать",
   "midnightcontrols.action.back": "Назад",
@@ -19,7 +19,7 @@
   "midnightcontrols.action.jump": "Прыжок",
   "midnightcontrols.action.left": "Налево",
   "midnightcontrols.action.pause_game": "Приостановить игру",
-  "midnightcontrols.action.pick_block": "Выбор Блок",
+  "midnightcontrols.action.pick_block": "Выбор Блока",
   "midnightcontrols.action.pickup": "Взять Половину",
   "midnightcontrols.action.pickup_all": "Взять Всё",
   "midnightcontrols.action.place": "Поставить",
@@ -27,7 +27,7 @@
   "midnightcontrols.action.quick_move": "Переложить",
   "midnightcontrols.action.right": "Направо",
   "midnightcontrols.action.screenshot": "Сделать Скриншот",
-  "midnightcontrols.action.slot_up": "Двинуть Слот На Вверх",
+  "midnightcontrols.action.slot_up": "Двинуть На Слот Вверх",
   "midnightcontrols.action.slot_down": "Двинуть На Слот Вниз",
   "midnightcontrols.action.slot_left": "Двинуть На Слот Влево",
   "midnightcontrols.action.slot_right": "Двинуть На Слот Вправо",
@@ -48,7 +48,7 @@
   "midnightcontrols.action.zoom_reset": "Сбросить Масштаб",
   "midnightcontrols.action.emi_page_left": "Предыдущая Страница",
   "midnightcontrols.action.emi_page_right": "Следующая Страница",
-  "midnightcontrols.category.emi": "Е.М.И.",
+  "midnightcontrols.category.emi": "ЕМИ",
   "midnightcontrols.button.a": "A",
   "midnightcontrols.button.b": "B",
   "midnightcontrols.button.x": "X",
@@ -97,7 +97,7 @@
   "midnightcontrols.controller_type.ouya": "OUYA",
   "midnightcontrols.controls_mode.default": "Клавиатура/Мышь",
   "midnightcontrols.controls_mode.controller": "Контроллер",
-  "midnightcontrols.controls_mode.touchscreen": "Сенсорный Экран (WIP)",
+  "midnightcontrols.controls_mode.touchscreen": "Сенсорный Экран (Разраб.)",
   "midnightcontrols.hud_side.left": "Больше Налево",
   "midnightcontrols.hud_side.right": "Больше Направо",
   "midnightcontrols.menu.analog_movement": "Аналоговое Движение",
