MidnightControls 1.5.0 - Hints, Legacy Icons, LibGUI
- Add hints when controller is available, but not enabled (Closes #81)
- Add optional Legacy controller icon pack (thanks @Ivanoks)
- Add LibGUI compatibility
- Fix #75 (Swift Sneak enchantment not working, thanks @andrewaramsay)
- Fix crawling being too fast
- Minify assets by @Madis0 and @RaptaG

--- a/src/main/resources/assets/midnightcontrols/lang/de_de.json
+++ b/src/main/resources/assets/midnightcontrols/lang/de_de.json
@@ -68,6 +68,8 @@
   "midnightcontrols.axis.right_x-": "Rechts X-",
   "midnightcontrols.axis.right_y-": "Rechts Y-",
   "midnightcontrols.button.unknown": "Unbekannt (%d)",
+  "midnightcontrols.controller.tutorial.title": "Spiele Minecraft mit Controller!",
+  "midnightcontrols.controller.tutorial.description": "Gehe zu %s -> %s -> %s",
   "midnightcontrols.controller.connected": "Controller %d verbunden.",
   "midnightcontrols.controller.disconnected": "Controller %d getrennt.",
   "midnightcontrols.controller.mappings.1": "Um die Controller-Mappings anzupassen, benutze %s",
