fix en lang file + fix packs

--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -4,7 +4,7 @@
   "key.midnightcontrols.look_left": "Look left",
   "key.midnightcontrols.look_right": "Look right",
   "key.midnightcontrols.look_up": "Look up",
-  "key.midnightcontrols.ring": "Show controls ring",
+  "key.midnightcontrols.ring": "Show radial menu",
   "midnightcontrols.action.attack": "Attack",
   "midnightcontrols.action.back": "Back",
   "midnightcontrols.action.chat": "Open Chat",
@@ -80,7 +80,7 @@
   "midnightcontrols.axis.right_x-": "Right X-",
   "midnightcontrols.axis.right_y-": "Right Y-",
   "midnightcontrols.button.unknown": "Unknown (%d)",
-  "midnightcontrols.controller.tutorial.title": "Play the game with a Controller!",
+  "midnightcontrols.controller.tutorial.title": "Play the game with a controller!",
   "midnightcontrols.controller.tutorial.description": "Go to %s -> %s -> %s",
   "midnightcontrols.controller.connected": "Controller %d connected.",
   "midnightcontrols.controller.disconnected": "Controller %d disconnected.",
@@ -90,19 +90,19 @@
   "midnightcontrols.controller.mappings.error.write": "Error while writing mappings to file.",
   "midnightcontrols.controller.mappings.updated": "Updated mappings!",
   "midnightcontrols.controller_type.default": "Default",
-  "midnightcontrols.controller_type.dualshock": "DualShock",
+  "midnightcontrols.controller_type.dualshock": "DualShock 4",
   "midnightcontrols.controller_type.dualsense": "DualSense",
-  "midnightcontrols.controller_type.switch": "Switch",
-  "midnightcontrols.controller_type.xbox": "Xbox",
-  "midnightcontrols.controller_type.xbox_360": "Xbox 360",
+  "midnightcontrols.controller_type.switch": "Switch (Pro) Controller",
+  "midnightcontrols.controller_type.xbox": "Xbox One/Series Controller",
+  "midnightcontrols.controller_type.xbox_360": "Xbox 360 Controller",
   "midnightcontrols.controller_type.steam_controller": "Steam Controller",
   "midnightcontrols.controller_type.steam_deck": "Steam Deck",
-  "midnightcontrols.controller_type.ouya": "OUYA",
+  "midnightcontrols.controller_type.ouya": "OUYA Controller",
   "midnightcontrols.controls_mode.default": "Keyboard/Mouse",
   "midnightcontrols.controls_mode.controller": "Controller",
   "midnightcontrols.controls_mode.touchscreen": "Touchscreen (WIP)",
-  "midnightcontrols.hud_side.left": "left",
-  "midnightcontrols.hud_side.right": "right",
+  "midnightcontrols.hud_side.left": "Left",
+  "midnightcontrols.hud_side.right": "Right",
   "midnightcontrols.menu.analog_movement": "Analog Movement",
   "midnightcontrols.menu.auto_switch_mode": "Auto Switch Mode",
   "midnightcontrols.menu.controller": "Controller",
@@ -118,7 +118,7 @@
   "midnightcontrols.menu.invert_right_x_axis": "Invert Right X",
   "midnightcontrols.menu.invert_right_y_axis": "Invert Right Y",
   "midnightcontrols.menu.keyboard_controls": "Keyboard Controls...",
-  "midnightcontrols.menu.left_dead_zone": "Left Dead Zone",
+  "midnightcontrols.menu.left_dead_zone": "Left Stick Dead Zone",
   "midnightcontrols.menu.mappings.open_input_str": "Open Mappings File Editor",
   "midnightcontrols.menu.max_left_x_value": "Left X Axis Max Value",
   "midnightcontrols.menu.max_left_y_value": "Left Y Axis Max Value",
@@ -128,14 +128,14 @@
   "midnightcontrols.menu.reacharound.horizontal": "Front Block Placing",
   "midnightcontrols.menu.reacharound.vertical": "Vertical Reacharound",
   "midnightcontrols.menu.reload_controller_mappings": "Reload Controller Mappings",
-  "midnightcontrols.menu.right_dead_zone": "Right Dead Zone",
+  "midnightcontrols.menu.right_dead_zone": "Right Stick Dead Zone",
   "midnightcontrols.menu.rotation_speed": "X Axis Rotation Speed",
   "midnightcontrols.menu.y_axis_rotation_speed": "Y Axis Rotation Speed",
   "midnightcontrols.menu.separator.controller": "Controller",
   "midnightcontrols.menu.separator.general": "General",
   "midnightcontrols.menu.title": "MidnightControls - Settings",
   "midnightcontrols.menu.title.controller": "Controller Options",
-  "midnightcontrols.menu.title.controller_controls": "Controller Controls",
+  "midnightcontrols.menu.title.controller_controls": "Controls",
   "midnightcontrols.menu.title.gameplay": "Gameplay Options",
   "midnightcontrols.menu.title.general": "General Options",
   "midnightcontrols.menu.title.hud": "HUD Options",
@@ -146,18 +146,18 @@
   "midnightcontrols.menu.virtual_mouse.skin": "Virtual Mouse Skin",
   "midnightcontrols.narrator.unbound": "Unbound %s",
   "midnightcontrols.not_bound": "Not bound",
-  "midnightcontrols.tooltip.analog_movement": "Enables analog movement when possible.",
-  "midnightcontrols.tooltip.auto_switch_mode": "If the controls mode should be switched to Controller automatically if one is connected.",
-  "midnightcontrols.tooltip.controller2": "Second controller to use, which allows Joy-Cons support for example.",
-  "midnightcontrols.tooltip.controller_type": "The controller type to display the correct buttons.",
+  "midnightcontrols.tooltip.analog_movement": "When possible, enables analog movement.",
+  "midnightcontrols.tooltip.auto_switch_mode": "Whether the controls mode should be switched to Controller automatically if one is connected.",
+  "midnightcontrols.tooltip.controller2": "Second controller to use, which allows (for example) Joy-Cons support.",
+  "midnightcontrols.tooltip.controller_type": "The controller type you're using (needed to display the correct buttons)",
   "midnightcontrols.tooltip.controls_mode": "The controls mode.",
-  "midnightcontrols.tooltip.double_tap_to_sprint": "Toggles whether the Walk Forwards key makes the player sprint when quickly double-tapped",
+  "midnightcontrols.tooltip.double_tap_to_sprint": "Toggles whether the Walk Forwards key makes the player sprint when double-tapped quickly",
   "midnightcontrols.tooltip.fast_block_placing": "While flying in creative mode, enables fast block placing depending on your speed. §cOn some servers this might be considered as cheating.",
   "midnightcontrols.tooltip.fly_drifting": "While flying, enables Vanilla drifting/inertia.",
   "midnightcontrols.tooltip.fly_drifting_vertical": "While flying, enables Vanilla vertical drifting/intertia.",
   "midnightcontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
   "midnightcontrols.tooltip.hud_side": "The position of the HUD.",
-  "midnightcontrols.tooltip.left_dead_zone": "The dead zone for the controller's left analogue stick.",
+  "midnightcontrols.tooltip.left_dead_zone": "The dead zone for the controller's left analog stick.",
   "midnightcontrols.tooltip.max_left_x_value": "Changes what the mod considers the highest value for the left X axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.tooltip.max_left_y_value": "Changes what the mod considers the highest value for the left Y axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.tooltip.max_right_x_value": "Changes what the mod considers the highest value for the right X axis. Useful if your axis does not use the full range and seems slow.",
@@ -166,11 +166,11 @@
   "midnightcontrols.tooltip.reacharound.horizontal": "Enables front block placing, §cmight be considered cheating on some servers§r.",
   "midnightcontrols.tooltip.reacharound.vertical": "Enables vertical reacharound, §cmight be considered cheating on some servers§r.",
   "midnightcontrols.tooltip.reload_controller_mappings": "Reloads the controller mappings file.",
-  "midnightcontrols.tooltip.right_dead_zone": "The dead zone for the controller's right analogue stick.",
-  "midnightcontrols.tooltip.rotation_speed": "The camera X Axis rotation speed in controller mode.",
-  "midnightcontrols.tooltip.y_axis_rotation_speed": "The camera Y Axis rotation speed in controller mode.",
-  "midnightcontrols.tooltip.unfocused_input": "Allow controller input when the window is not focused.",
-  "midnightcontrols.tooltip.virtual_mouse": "Enable the virtual mouse which is handful in the case of a splitscreen.",
+  "midnightcontrols.tooltip.right_dead_zone": "The dead zone for the controller's right analog stick.",
+  "midnightcontrols.tooltip.rotation_speed": "The camera's X Axis rotation speed in controller mode.",
+  "midnightcontrols.tooltip.y_axis_rotation_speed": "The camera's Y Axis rotation speed in controller mode.",
+  "midnightcontrols.tooltip.unfocused_input": "Allows controller input when the window is not focused.",
+  "midnightcontrols.tooltip.virtual_mouse": "Enables the virtual mouse which is useful ie during splitscreen.",
   "midnightcontrols.virtual_mouse.skin.default_light": "Default Light",
   "midnightcontrols.virtual_mouse.skin.default_dark": "Default Dark",
   "midnightcontrols.virtual_mouse.skin.second_light": "Second Light",
