--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -8,9 +8,10 @@
   "midnightcontrols.action.attack": "Attack",
   "midnightcontrols.action.back": "Back",
   "midnightcontrols.action.chat": "Open Chat",
+  "midnightcontrols.action.controls_ring": "Open Unbound Keybind Ring",
   "midnightcontrols.action.debug_screen": "Open Debug HUD (F3)",
   "midnightcontrols.action.drop_item": "Drop Item",
-  "midnightcontrols.action.exit": "Exit",
+  "midnightcontrols.action.exit": "Exit Screen",
   "midnightcontrols.action.forward": "Forward",
   "midnightcontrols.action.hit": "Hit",
   "midnightcontrols.action.hotbar_left": "Hotbar left",
